[tool.poetry]
    name        = "bell-avr-vmc-sandbox-module"
    version     = "0.1.0"
    description = "Student autonomy module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Sandbox-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.12"
    loguru             = "^0.6.0"
    bell-avr-libraries = { extras = ["mqtt"], version = "^0.1.13" }

[tool.poetry.group.dev.dependencies]
    pre-commit = "^2.21.0"

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"

[tool.ruff]
    # Ignore line too long. In some cases, black doesn't know how
    # to wrap it, and it's not a deal breaker.
    ignore = ["E501"]
