[tool.poetry]
    # Information about our project.
    name        = "bell-avr-vmc-sandbox-module"
    version     = "0.1.0"
    description = "Student autonomy module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Sandbox-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python = ">=3.9,<3.13"
    # These dependencies are external packages that we download
    # and use to help us build our project. Instead of writing the same
    # code lots of times, we can download and install the code
    # to share it between projects. Additionally, we can use code
    # other people have written.
    loguru             = "0.7.2"
    bell-avr-libraries = "0.2.0a7"

[tool.poetry.group.dev.dependencies]
    # These dependencies are only installed in a development environment.
    # These are tools that help us write better code, but are not needed
    # when the code runs.
    pre-commit = "3.6.0"

[tool.pyright]
    # These settings are required for the `pyright` tool to work
    # correctly with `pre-commit`.
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"
    # This enables warnings for missing type hints
    reportMissingParameterType = true

